app/schools/engineering-and-science/faculty/[slug]/page.module.scss
.section {
  padding: 2rem 0;
  & > div {
    background: #fff;
    box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
    display: flex;
    align-items: flex-start;
    background: #fff;
    border-radius: 4px;
  }
}

.profile {
  width: 25%;
  padding: 4rem 1.5rem 4rem 5rem;
  display: flex;
  flex-direction: column;
  // align-items: center;

  img {
    border-radius: 50%;
    object-fit: cover;
    margin-bottom: 2rem;
  }

  & > h1,
  & > h3 {
    // text-align: center;
    margin-bottom: 0.25rem;
  }

  h1 {
    line-height: 1;
    margin-bottom: 0.75rem;
  }

  & > h3 {
    font-size: 1.4rem;
    &:last-of-type {
      margin-bottom: 2rem;
    }
  }

  p {
    display: flex;
    align-items: center;
    line-height: 1.6;
    svg {
      margin-right: 0.5rem;
      flex-shrink: 0;
    }
  }
}

.website {
  font-size: 1.2rem;
}

.qualification {
  margin: 2rem 0 0;
  & > div {
    &:not(:last-child) {
      margin-bottom: 1rem;
    }
  }
  h2 {
    font-size: 1.7rem;
    margin-bottom: 1rem;
  }
  h3 {
    font-size: 1.5rem;
  }
}

.awards {
  width: 100%;
  margin-top: 2rem;
  h2 {
    font-size: 1.7rem;
    margin-bottom: 1.5rem;
  }
  li {
    display: flex;
    list-style-type: none;
    line-height: 1.4;
    margin-bottom: 1rem;
    border-bottom: 2px solid #edeef2;
    padding-bottom: 1rem;
    p {
      line-height: 1.5;
    }
    svg {
      flex-shrink: 0;
      margin-right: 1rem;
      margin-top: 0.5rem;
      width: 16px;
      height: 16px;
    }
  }
}

.main {
  width: 75%;
  padding: 4rem 4rem 4rem 1.5rem;

  h2 {
    margin-bottom: 1rem;
  }
  & > div {
    &:not(:last-child) {
      margin-bottom: 3rem;
    }
  }
}

.interests {
  border: 1px solid #e7e7e7;
  border-top-color: rgb(231, 231, 231);
  border-top-style: solid;
  border-top-width: 1px;
  border-top: 3px solid #f4b442;
  padding: 2rem;
  p {
    font-size: 1.6rem;
  }
}

.courses {
  border: 1px solid #e7e7e7;
  border-top-color: rgb(231, 231, 231);
  border-top-style: solid;
  border-top-width: 1px;
  border-top: 3px solid #f4b442;
  padding: 2rem;
  ul {
    padding-left: 2rem;
    li {
      line-height: 1.8;
      font-size: 1.5rem;
      a {
        span {
          color: #493076;
        }
      }
    }
  }
}

.papers {
  & > div {
    border: 1.5px solid #edeef2;
    border-radius: 7px;
    padding: 1rem 2rem;
    &:not(:last-child) {
      margin-bottom: 1.5rem;
    }
  }
}

.paper {
  > * {
    &:not(:last-child) {
      margin-bottom: 0.7rem;
    }
  }
  h4 {
    color: #f4b442;
  }
  h3 {
    margin-bottom: 1.25rem !important;
  }
}

.authors {
  display: flex;
  align-items: flex-start;
  flex-wrap: wrap;
  gap: 2rem;
  row-gap: 0;
  p {
    flex-shrink: 0;
    margin: 0;
    svg {
      margin-right: 0.15rem;
    }
  }
}

.books {
  border: 1px solid #e7e7e7;
  border-top-color: rgb(231, 231, 231);
  border-top-style: solid;
  border-top-width: 1px;
  border-top: 3px solid #f4b442;
  padding: 2rem;
  ul {
    display: flex;
    gap: 1rem;
    padding: 1rem;
    overflow: scroll;
    li {
      flex: 0 0 30%;
      list-style-type: none;
      display: flex;
      gap: 1rem;
      img {
        border-radius: 5px;
        height: 150px;
        width: 100px;
      }
      p {
        margin-top: 1rem;
      }
    }
  }
}

@media (max-width: 768px) {
  .section {
    padding: 0;
    & > div {
      flex-direction: column;
    }
  }
  .profile {
    width: 100%;
    align-items: flex-start;
    padding: 2rem;
    img {
      margin: 2rem auto 4rem;
    }
    & > h1 {
      text-align: center;
    }
    & > h1,
    h3 {
      margin: 0 auto;
    }
    & > h3 {
      margin: 0 auto 3rem;
    }
  }
  .main {
    width: 100%;
    padding: 1rem;
  }
  .authors {
    row-gap: 5px;
  }
  .books {
    ul {
      flex-direction: column;
      gap: 2rem;
      li {
        width: 100%;
      }
    }
  }
}

